chore(app): update .env.example

--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,8 @@ DB_PASSWORD=secret
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
-JWT_PRIVATE_KEY=file://C:\..private.pem
-JWT_PUBLIC_KEY=file://C:\..public.pem
+JWT_PRIVATE_KEY=
+JWT_PUBLIC_KEY=
 
 JWT_TTL=5
 JWT_REFRESH_TTL=7200
