--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "google/recaptcha": "^1.2",
         "laravel/lumen-framework": "^8.0",
         "tymon/jwt-auth": "^1.0"
     },
