feat(app): mailer added on account creation

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0",
         "google/recaptcha": "^1.2",
         "laravel/lumen-framework": "^8.0",
+        "mailjet/mailjet-apiv3-php": "^1.5",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
