fix(app): fix ci

--- a/.github/workflows/tests-lumen.yml
+++ b/.github/workflows/tests-lumen.yml
@@ -16,7 +16,7 @@ jobs:
         image: mysql:latest
         env:
           MYSQL_DATABASE: test_db
-          MYSQL_USER: user
+          MYSQL_USER: homestead
           MYSQL_PASSWORD: secret
           MYSQL_ROOT_PASSWORD: secretroot
         ports:
@@ -53,7 +53,7 @@ jobs:
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
           MYSQL_DATABASE: test_db
-          DB_USERNAME: user
+          DB_USERNAME: homestead
           DB_PASSWORD: secret
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
         run: vendor/bin/phpunit tests --configuration phpunit.xml --coverage-clover phpunit.coverage.xml --log-junit phpunit.report.xml
