--- a/.github/workflows/tests-lumen.yml
+++ b/.github/workflows/tests-lumen.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           mysql --version
           sudo apt-get install -y mysql-client
-          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "SHOW DATABASES"
+          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uhomestead -psecret -e "SHOW DATABASES"
 
       - name: Setup PHP with Xdebug
         uses: shivammathur/setup-php@v2
