ci(app): sonarcloud inclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=goodfood-cesi_api-auth
 sonar.organization=goodfood-cesi
 
 sonar.php.coverage.reportPaths=phpunit.coverage.xml
-sonar.coverage.exclusions = **/tests/**/*.*
+sonar.coverage.inclusions = **/app/Exceptions/**, **/app/Http/**, **/app/Models/**, **/app/Traits/**
