--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=goodfood-cesi_api-auth
 sonar.organization=goodfood-cesi
 
 sonar.php.coverage.reportPaths=phpunit.coverage.xml
-sonar.coverage.exclusions = **/tests/**/*.*, **/app/Mails/**, **/bootstrap/**
+sonar.coverage.exclusions = **/tests/**/*.*, **/app/Mails/**, **/bootstrap/**, **/config/**, **/database/**, **/public/**, **/routes/**, **/storage/**, **/vendor/**, **/webpack.config.js
